--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="Your business digital marketing & growth solutions"
     />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -68,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-1.jpg"
+              src="./images/our-team/mark-guerrero-avatar.jpg"
               alt="Mark Guerrero photo"
               width="264"
               height="260"
@@ -78,7 +79,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/our-team/tom-ford-avatar.jpg"
               alt="Tom Ford photo"
               width="264"
               height="260"
@@ -88,7 +89,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/our-team/camila-garcia-avatar.jpg"
               alt="Camila Garcia photo"
               width="264"
               height="260"
@@ -98,13 +99,66 @@
           </li>
           <li>
             <img
-              src="./images/img-4.jpg"
+              src="./images/our-team/daniel-wilson-avatar.jpg"
               alt="Daniel Wilson photo"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our-portfolio/bank-app-image.jpg"
+              alt="BankApp screens"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/cashless-payment-image.jpg"
+              alt="Scanning QR code"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/meditation-app-image.jpg"
+              alt="Devices with meditation app"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/taxi-service-image.jpg"
+              alt="Driver with GPS navigator"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/screen-illustrations-image.jpg"
+              alt="Screen gallery"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/online-courses-image.jpg"
+              alt="Girl studies in smartphone"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
