--- a/index.html
+++ b/index.html
@@ -7,57 +7,75 @@
       content="Your business digital marketing & growth solutions"
     />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-first-part">Web</span>Studio</a
+        >
+        <ul class="page-nav">
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contacts">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
+        <button class="page-title-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
+        <h2 class="section-title">Our advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantage-title">Strategy</h3>
+            <p class="advantage-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantage-title">Punctuality</h3>
+            <p class="advantage-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantage-title">Diligence</h3>
+            <p class="advantage-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantage-title">Technologies</h3>
+            <p class="advantage-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -65,7 +83,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -74,8 +92,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member-title">Mark Guerrero</h3>
+            <p class="team-member-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -84,8 +102,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member-title">Tom Ford</h3>
+            <p class="team-member-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -94,8 +112,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member-title">Camila Garcia</h3>
+            <p class="team-member-text">Marketing</p>
           </li>
           <li>
             <img
@@ -104,68 +122,82 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member-title">Daniel Wilson</h3>
+            <p class="team-member-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
               src="./images/our-portfolio/bank-app-image.jpg"
               alt="BankApp screens"
+              width="360"
+              height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item-title">Banking App</h3>
+            <p class="portfolio-item-field">App</p>
           </li>
           <li>
             <img
               src="./images/our-portfolio/cashless-payment-image.jpg"
               alt="Scanning QR code"
+              width="360"
+              height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Cashless Payment</h3>
+            <p class="portfolio-item-field">Marketing</p>
           </li>
           <li>
             <img
               src="./images/our-portfolio/meditation-app-image.jpg"
               alt="Devices with meditation app"
+              width="360"
+              height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item-title">Meditation App</h3>
+            <p class="portfolio-item-field">App</p>
           </li>
           <li>
             <img
               src="./images/our-portfolio/taxi-service-image.jpg"
               alt="Driver with GPS navigator"
+              width="360"
+              height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Taxi Service</h3>
+            <p class="portfolio-item-field">Marketing</p>
           </li>
           <li>
             <img
               src="./images/our-portfolio/screen-illustrations-image.jpg"
               alt="Screen gallery"
+              width="360"
+              height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-item-title">Screen Illustrations</h3>
+            <p class="portfolio-item-field">Design</p>
           </li>
           <li>
             <img
               src="./images/our-portfolio/online-courses-image.jpg"
               alt="Girl studies in smartphone"
+              width="360"
+              height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Online Courses</h3>
+            <p class="portfolio-item-field">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="page-footer">
+      <a class="logo" href="./index.html"
+        ><span class="logo-first-part">Web</span>Studio</a
+      >
+      <p class="page-footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
