--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <header class="page-header">
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-first-part">Web</span>Studio</a
+          >Web<span class="logo-first-part">Studio</span></a
         >
         <ul class="page-nav">
-          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-title">
         <ul class="contacts">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
@@ -45,11 +45,11 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="first-page">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
         <button class="page-title-button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="advantages">
         <h2 class="section-title">Our advantages</h2>
         <ul>
           <li>
@@ -82,10 +82,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="studio-team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-member">
             <img
               src="./images/our-team/mark-guerrero-avatar.jpg"
               alt="Mark Guerrero photo"
@@ -95,7 +95,7 @@
             <h3 class="team-member-title">Mark Guerrero</h3>
             <p class="team-member-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/our-team/tom-ford-avatar.jpg"
               alt="Tom Ford photo"
@@ -105,7 +105,7 @@
             <h3 class="team-member-title">Tom Ford</h3>
             <p class="team-member-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/our-team/camila-garcia-avatar.jpg"
               alt="Camila Garcia photo"
@@ -115,7 +115,7 @@
             <h3 class="team-member-title">Camila Garcia</h3>
             <p class="team-member-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/our-team/daniel-wilson-avatar.jpg"
               alt="Daniel Wilson photo"
@@ -127,7 +127,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="portfolio">
         <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
@@ -195,7 +195,7 @@
     </main>
     <footer class="page-footer">
       <a class="logo" href="./index.html"
-        ><span class="logo-first-part">Web</span>Studio</a
+        >Web<span class="logo-first-part">Studio</span></a
       >
       <p class="page-footer-text">
         Increase the flow of customers and sales for your business with digital
